# LLM-Chat

./: .gitignore  KB_GUI_GUIDE_ZH.md  KB_GUI_INTEGRATION_SUMMARY.md  KB_IMPLEMENTATION_SUMMARY.md  KB_INTEGRATION.md  README.md  README_CN.md  README_KB_ZH.md  llm_chat_reference.py  publish.bat  publish.sh  pyproject.toml  requirements-linux.txt  requirements.txt  upload_pypi.bat  upload_pypi.sh
examples/: kb_demo.py  kb_settings_standalone.py
scripts/: generate_screenshots.py  upload_pypi.py
src/liao/: __init__.py  api.py
src/liao/agent/: chat_parser.py  conversation.py  kb_helpers.py  prompts.py  workflow.py
src/liao/core/: area_detector.py  chat_automation.py  chat_input.py  input_simulator.py  macos_area_detector.py  macos_input.py  macos_screenshot.py  screenshot.py  send_mode.py  smart_automation.py  wayland_capture.py  window_manager.py
src/liao/gui/: main_window.py  overlay.py  workers.py
src/liao/gui/i18n/: en_US.json  zh_CN.json
src/liao/gui/pages/: __init__.py  area_page.py  chat_page.py  connection_page.py  kb_page.py  kb_settings_page.py  opencode_page.py
src/liao/gui/widgets/: __init__.py  kb_selector.py  kb_upload_dialog.py  progress_indicator.py
src/liao/knowledge/: __init__.py  kb_config.py  kb_manager.py  retriever.py
src/liao/llm/: base.py  ollama.py
src/liao/opencode/: client.py
src/llm_chat/: __init__.py  __main__.py  _version.py  api.py  cli.py
src/llm_chat/agent/: __init__.py  chat_parser.py  conversation.py  prompts.py  workflow.py
src/llm_chat/core/: __init__.py  area_detector.py  input_simulator.py  screenshot.py  window_manager.py
src/llm_chat/gui/: __init__.py  main_window.py  overlay.py  workers.py
src/llm_chat/gui/i18n/: __init__.py  en_US.json  translator.py  zh_CN.json
src/llm_chat/gui/pages/: __init__.py  area_page.py  base_page.py  chat_page.py  connection_page.py  window_page.py
src/llm_chat/gui/widgets/: __init__.py  progress_indicator.py
src/llm_chat/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama.py  openai_client.py
src/llm_chat/models/: __init__.py  detection.py  message.py  window.py
tests/: conftest.py  test_agent.py  test_core.py  test_llm.py  test_wechat_send.py  test_xdotool_integration.py
